# equilibrium

./: Cargo.toml  README.md
.github/actions/setup-equilibrium/: README.md
docs/: USAGE.md
docs/superpowers/specs/: 2026-06-05-one-call-polyglot-exports-design.md
equilibrium-d/: README.md  equilibrium.d
equilibrium-nim/: README.md  equilibrium.nim
equilibrium-rust/: Cargo.toml  README.md
equilibrium-zig/: README.md  equilibrium.zig
examples/polyglot-gui/: Cargo.toml  build.rs
examples/polyglot-gui/src/: main.rs  polyglot.rs  tui.rs
examples/polyglot-gui/templates/: polyglot-gui.crepus  polyglot-tui.crepus  polyglot.crepus
src/: bindings.rs  c_header.rs  compiler.rs  detector.rs  exports.rs  imports.rs  lib.rs  limits.rs  loader.rs  scanner.rs
tests/: export_discovery.rs  import_generation.rs
