[package]
name = "equilibrium-ffi"
authors = ["Max Carter <max@undivisible.dev>"]
version = "0.1.2"
edition = "2021"
description = "Automatic C FFI generation for C-compiling languages (V, Zig, C++, C#, Rust, D, Nim, Odin) (unstable and in development)"
license = "MPL-2.0"
repository = "https://github.com/tschk/equilibrium"
exclude = ["AGENTS.md"]

[dependencies]
which = "6"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
clap = { version = "4", features = ["derive"], optional = true }
dialoguer = { version = "0.11", optional = true }
console = { version = "0.15", optional = true }

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "eq"
path = "src/bin/eq/main.rs"
required-features = ["cli"]

[features]
cli = ["dep:clap", "dep:dialoguer", "dep:console"]
